--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
     </header>
-
+    <h1>Juan Diego Pabon Rosero</h1>
     <!-- Carrusel de imágenes o slider -->
     <div class="slider">
         <!-- Botones de radio para el control manual del slider -->
