--- a/servicios.html
+++ b/servicios.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <body>
     <h1 class="titulo">Nuestros Servicios</h1>
-
+     <link rel="stylesheet" href="styles2.css">
     <div class="cards-container">
         <div class="card">
             <img src="https://geb-imgix.grupoenergiabogota.com/images/_aliases/promo_card/0/1/3/4/464310-1-esl-CO/bec6c9c651a8-sgi.png">
