--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                 </li>
                 <li><a href="servicios.html">Servicios</a></li> <!-- Enlace a la sección de Servicios. -->
-                <li><a href="#">Contactos</a></li> <!-- Enlace a la sección de Contactos. -->
+                <li><a href="contactos.html">Contactos</a></li> <!-- Enlace a la sección de Contactos. -->
             </ul>
         </nav>
     </header>
